fix: disable pinch-to-zoom gestures on mobile devices
- Update viewport meta tag to disable zoom (maximumScale: 1, userScalable: false)
- Add CSS touch-action: manipulation to prevent zoom gestures
- Disable text selection globally but allow in input fields
- Improve mobile app-like experience by preventing accidental zoom

--- a/app/globals.css
+++ b/app/globals.css
@@ -22,6 +22,14 @@
   body {
     max-width: 100vw;
     overflow-x: hidden;
+    /* Prevent zoom gestures on mobile */
+    touch-action: manipulation;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
   }
 
   body {
@@ -31,6 +39,15 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     line-height: 1.6;
+  }
+
+  /* Allow text selection in input fields and text areas */
+  input, textarea, [contenteditable] {
+    -webkit-user-select: text;
+    -khtml-user-select: text;
+    -moz-user-select: text;
+    -ms-user-select: text;
+    user-select: text;
   }
 
   code {
